syntax = "proto3";

package gzv2ray.core.common.protocol;
option csharp_namespace = "GzV2Ray.Core.Common.Protocol";
option go_package = "github.com/gzjjjfree/gzv2ray-v4/common/protocol";
option java_package = "com.gzv2ray.core.common.protocol";
option java_multiple_files = true;

enum SecurityType {
  UNKNOWN = 0;
  LEGACY = 1;
  AUTO = 2;
  AES128_GCM = 3;
  CHACHA20_POLY1305 = 4;
  NONE = 5;
  ZERO = 6;
}

message SecurityConfig {
  SecurityType type = 1;
}
