syntax = "proto3";

package gzv2ray.core.transport;
option csharp_namespace = "GzV2Ray.Core.Transport";
option go_package = "github.com/gzjjjfree/gzv2ray-v4/transport";
option java_package = "com.gzv2ray.core.transport";
option java_multiple_files = true;

import "transport/internet/config.proto";

// Global transport settings. This affects all type of connections that go
// through V2Ray. Deprecated. Use each settings in StreamConfig.
// 全局传输设置。这会影响通过 V2Ray 的所有类型的连接。已弃用。使用 StreamConfig 中的每个设置
message Config {
  option deprecated = true;
  repeated gzv2ray.core.transport.internet.TransportConfig transport_settings = 1;
}
