syntax = "proto3";

package gzv2ray.core.transport.internet.tcp;
option csharp_namespace = "GzV2Ray.Core.Transport.Internet.Tcp";
option go_package = "github.com/gzjjjfree/gzv2ray-v4/transport/internet/tcp";
option java_package = "com.gzv2ray.core.transport.internet.tcp";
option java_multiple_files = true;

import "common/serial/typed_message.proto";

message Config {
  reserved 1;
  gzv2ray.core.common.serial.TypedMessage header_settings = 2;
  bool accept_proxy_protocol = 3;
}
