syntax = "proto3";

package gzv2ray.core.transport.internet.websocket;
option csharp_namespace = "GzV2Ray.Core.Transport.Internet.Websocket";
option go_package = "github.com/gzjjjfree/gzv2ray-v4/transport/internet/websocket";
option java_package = "com.gzv2ray.core.transport.internet.websocket";
option java_multiple_files = true;

message Header {
  string key = 1;
  string value = 2;
}

message Config {
  reserved 1;

  // URL path to the WebSocket service. Empty value means root(/).
  string path = 2;

  repeated Header header = 3;

  bool accept_proxy_protocol = 4;

  int32 max_early_data = 5;

  bool use_browser_forwarding = 6;
}
